# openscad_lalr_parser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pytest.yml
src/openscad_lalr_parser/: __init__.py  cli.py  grammar.lark  nodes.py  pretty_print.py  scope.py  serialization.py  source_map.py  transformer.py
tests/: conftest.py  test_assignments.py  test_ast_convenience.py  test_ast_generation.py  test_cli.py  test_complex.py  test_control.py  test_expressions.py  test_functions.py  test_lexical.py  test_modules.py  test_nodes.py  test_pretty_print.py  test_scope.py  test_serialization.py  test_source_map.py  test_use_include.py  test_vectors.py
